# WardrobeDemo

./: .gitignore  AI_Hub_learning_v2.md  CLAUDE.md  README.md  parse_csv.py
5.14MVP/: app.py  auto_label.py  data_format_v1.md  db.py  fashion_dispatch.py  fashion_router.py  image2_client.py  import_batch.py  look_manager.py  main.py  mcp_label.py  mcp_label_skip.json  openai_client.py  outfit_generator.py  outfit_recommender.py  phase1_wardrobe.py  phase2_tryon.py  pose_engine.py  prd_v1.0.md  prd_v1.1.md  pyproject.toml  remote_mcp_client.py  requirements.txt  run_e2e.py  scene_engine.py  style_identity.py  test_fashion_dispatch.py  test_fashion_router.py  test_image2.py  test_look_manager.py  test_openai.py  test_outfit_generator.py  test_recommender.py  test_store_pipeline.py  test_style_identity.py  test_tryon.py  tryon_skill.py  wardrobe_mcp.py
5.14MVP/prompt_versions/: grid_v1.json  store_outfit_v1.json
5.14MVP/static/: manifest.json
5.14MVP/static/css/: base.css  index.css  wardrobe.css
5.14MVP/static/js/: common.js
5.14MVP/templates/: base.html  index.html  looks.html  profile.html  tryon.html  wardrobe.html  wardrobe_upload.html
docs/: TODO_20260515.md  blogger_visit_20260520.md  design_recommend_v2.md  fashion_agent_architecture.md  items.json  tech_diary.md  wardrobe_items.csv
docs/ai_hub/: AI_Hub_Skill_Protocol_v0.1.md  AI_Hub_UI_Collaboration_v0.1.md  AI_Hub_UI_System_v0.1.md  README.md
docs/prd/: prd_v0.2.md  prd_v0.3.md
docs/reports/: .daily_report_20260515.bak.md  daily_report_20260513.md  (+5 more)
test/: taobao_vs_ours.md  test_guide.md
(+2 files in other folders)
